# beetle

./: .gitignore  Makefile  README.md  build-linux-x86.sh  build-local.sh
docs/: commands.md  connectiontest.md  devicetest.md
pkg/: configure.ac  configure.openwrt
pkg/src/: CMakeLists.txt  CMakeLists.x86  Makefile.am  armel.cmake  babygatt_central.c  babygatt_central.h  babygatt_common.c  babygatt_common.h  babygatt_peripheral.c  babygatt_peripheral.h  beetle.c  beetle.h  build-armel.sh  build-linux-x86.sh  build-raspberrypi.sh  central.c  central.h  command.c  command.h  connlist.c  connlist.h  devicelist.c  devicelist.h  evloop.c  evloop.h  hci_beetle.c  hci_beetle.h  log.c  log.h  make-build-info.sh  peripheral.c  peripheral.h  raspberrypi.cmake  utils.c  utils.h  x86_64-linux-gnu.cmake
