bin_PROGRAMS = beetle
beetle_LDADD = -lbluetooth
beetle_SOURCES = \
    babygatt_central.c      \
    babygatt_central.h      \
    babygatt_common.c       \
    babygatt_common.h       \
    babygatt_peripheral.c   \
    babygatt_peripheral.h   \
    beetle.c                \
    beetle.h                \
    central.c               \
    central.h               \
    command.c               \
    command.h               \
    connlist.c              \
    connlist.h              \
    devicelist.c            \
    devicelist.h            \
    evloop.c                \
    evloop.h                \
    hci_beetle.c            \
    hci_beetle.h            \
    log.c                   \
    log.h                   \
    peripheral.c            \
    peripheral.h            \
    utils.c                 \
    utils.h                 \
    $(NULL)
